--- a/.env
+++ b/.env
@@ -19,3 +19,10 @@ APP_SECRET=5efe1ac31fa0e2ea650649a345a1cd83
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+ DATABASE_URL="sqlite:///%kernel.project_dir%/var/sqlite.db"
+###< doctrine/doctrine-bundle ###
