--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,14 @@
     "symfony/dotenv": "4.3.*",
     "symfony/flex": "^1.1",
     "symfony/framework-bundle": "4.3.*",
+    "symfony/orm-pack": "^1.0",
     "symfony/yaml": "4.3.*"
   },
   "require-dev": {
+    "doctrine/doctrine-migrations-bundle": "^2.0",
     "phpstan/phpstan": "^0.11.8",
     "phpunit/phpunit": "^8.1",
+    "symfony/maker-bundle": "^1.11",
     "symfony/var-dumper": "4.3.*"
   },
   "config": {
