creates service for reseting password

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 index:
     path: /api/users/{email}
     controller: App\Controller\User\FindUserByEmailController
+
+password_reset:
+    path: /api/users/{email}/password-reset
+    controller: App\Controller\User\RequestPasswordResetController
