--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "doctrine/doctrine-migrations-bundle": "^2.0",
     "phpstan/phpstan": "^0.11.8",
     "phpunit/phpunit": "^8.1",
+    "symfony/browser-kit": "4.3.*",
     "symfony/maker-bundle": "^1.11",
     "symfony/var-dumper": "4.3.*"
   },
