--- a/.env
+++ b/.env
@@ -26,3 +26,10 @@ APP_SECRET=5efe1ac31fa0e2ea650649a345a1cd83
 # Configure your db driver and server_version in config/packages/doctrine.yaml
  DATABASE_URL="sqlite:///%kernel.project_dir%/var/sqlite.db"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=smtp://mailcatcher:1025?encryption=&auth_mode=
+###< symfony/swiftmailer-bundle ###
